[gd_scene load_steps=38 format=2]

[ext_resource path="res://resource/Shadow.png" type="Texture" id=1]
[ext_resource path="res://resource/fonts/battleLog16.tres" type="DynamicFont" id=2]
[ext_resource path="res://resource/Barra_Base.png" type="Texture" id=3]
[ext_resource path="res://resource/Panel_Battle_Log.png" type="Texture" id=4]
[ext_resource path="res://resource/Pigeon_Basic.png" type="Texture" id=5]
[ext_resource path="res://resource/Bar_BG.png" type="Texture" id=6]
[ext_resource path="res://resource/fonts/monogram.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://resource/fonts/mago3.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://resource/sprites/God_Pigeon.png" type="Texture" id=9]
[ext_resource path="res://resource/Bar_Attack.png" type="Texture" id=10]
[ext_resource path="res://resource/Arena_Sand.png" type="Texture" id=11]
[ext_resource path="res://scenes/battleSceneNew.gd" type="Script" id=12]
[ext_resource path="res://scenes/playerStats.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/enemyStatsV2.tscn" type="PackedScene" id=14]
[ext_resource path="res://resource/fonts/battleLog32Shadow.tres" type="DynamicFont" id=15]
[ext_resource path="res://resource/fonts/battlePhrase32.tres" type="DynamicFont" id=16]

[sub_resource type="GDScript" id=1]
script/source = "extends Position2D
func _ready():set_process(true)
func _process(delta):get_tree().root.get_node(\"/root/battleScene\").enemyDefaultPos=self.global_position
"

[sub_resource type="GDScript" id=2]
script/source = "extends Sprite
var targetPos=Vector2()
var duration=1.0
var twnHit=Tween.new()
var dead=false
func hit():
	twnHit.interpolate_property(self,\"scale\",Vector2(0.8,1.2)*self.scale,Vector2(1,1),0.4,Tween.TRANS_QUINT,Tween.EASE_OUT)
	twnHit.start()
func _ready():
	$pigeon.texture=load(global.pigeonClassesAndSprites[global.enemy.class].sprite)
	randomize()
	duration*=rand_range(0.5,1.5)
	targetPos=self.global_position
	var twnEnter=Tween.new()
	add_child(twnEnter)
	twnEnter.interpolate_property(self,\"rect_global_position:y\",OS.window_size.y*2,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnEnter.start()
	
	twnHit=Tween.new()
	add_child(twnHit)
	twnHit.interpolate_property(self,\"rect_global_position:y\",OS.window_size.y*2,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnHit.start()
	
	get_tree().root.get_node(\"/root/battleScene\").enemySpr=self
	$area2D.connect(\"area_entered\",get_tree().root.get_node(\"/root/battleScene\"),\"effects\")
	$area2D.connect(\"area_entered\",self,\"hit\")
	set_process(true)
	
func _process(delta):
	if self.global_position.y>OS.window_size.y:self.visible=false
	if dead:
		dead=false
		self.z_index=10
		$twnDead.interpolate_property(self,\"modulate\",self.modulate,Color(\"#888888\"),0.8,Tween.TRANS_QUINT,Tween.EASE_OUT)
		$twnDead.interpolate_property(self,\"global_position:x\",self.global_position.x,self.global_position.x+rand_range(400,600),3,Tween.TRANS_SINE,Tween.EASE_IN_OUT)
		$twnDead.interpolate_property(self,\"global_position:y\",self.global_position.y,self.global_position.y+rand_range(400,500),1,Tween.TRANS_BACK,Tween.EASE_IN)
		$twnDead.interpolate_property(self,\"rotation\",self.rotation,12*PI,6,Tween.TRANS_QUINT,Tween.EASE_OUT)
		$twnDead.start()
"

[sub_resource type="CircleShape2D" id=3]
radius = 55.0

[sub_resource type="GDScript" id=4]
script/source = "extends Sprite
var defaultY=0
var t=0
var omega=PI
func _ready():
	var defaultY=self.position.y
	set_process(true)
func _process(delta):
	t+=delta
	self.position.y=defaultY+20*sin(t*omega)
"

[sub_resource type="GDScript" id=20]
script/source = "extends MarginContainer
func _ready():set_process(true)
func _process(delta):self.rect_global_position=get_parent().get_node(\"actionBar\").rect_global_position
"

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 96, 12 )
modulate_color = Color( 0, 0, 0, 0.6 )

[sub_resource type="GDScript" id=5]
script/source = "extends TextureProgress

var targetPos=Vector2()
var duration=1.0

func _ready():
	randomize()
	duration*=rand_range(0.5,1.5)
	targetPos=self.rect_global_position
	self.rect_global_position.y=-1.5*self.rect_size.y
	var twnEnter=Tween.new()
	add_child(twnEnter)
	twnEnter.interpolate_property(self,\"rect_global_position:y\",self.rect_global_position.y,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnEnter.start()
	set_process(true)
func _process(delta):
	$cPUParticles2D.position.x=self.value*115/50
	if global.enemy.hp<=0 or global.player.hp<=0:
		$cPUParticles2D.one_shot=true
		self.value=lerp(self.value,0,0.2)
	else:
		self.value=get_tree().root.get_node(\"/root/battleScene\").enemyStamina
"

[sub_resource type="Curve" id=17]
_data = [ Vector2( 0, 1 ), 0.0, -0.0902597, 0, 0, Vector2( 1, 0 ), -5.24895, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0, 0.227451, 0.772549, 1 )
colors = PoolColorArray( 0.45098, 0.152941, 0.360784, 1, 0.690196, 0.188235, 0.360784, 1, 1, 0.419608, 0.592157, 1, 1, 1, 1, 1 )

[sub_resource type="GDScript" id=6]
script/source = "extends Position2D
func _ready():set_process(true)
func _process(delta):get_tree().root.get_node(\"/root/battleScene\").playerDefaultPos=self.global_position
"

[sub_resource type="GDScript" id=7]
script/source = "extends Sprite
var targetPos=Vector2()
var duration=1.0
var twnHit=Tween.new()
var dead=false

func _ready():
	randomize()
	get_tree().root.get_node(\"/root/battleScene\").playerSpr=self
	$pigeon.texture=load(global.pigeonClassesAndSprites[global.player.class].sprite)
	duration*=rand_range(0.8,1.2)
	targetPos=self.global_position
	var twnEnter=Tween.new();add_child(twnEnter)
	twnEnter.interpolate_property(self,\"global_position:y\",OS.window_size.y*2,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnEnter.start()
	
	twnHit=Tween.new()
	add_child(twnHit)
	twnHit.interpolate_property(self,\"global_position:y\",OS.window_size.y*2,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnHit.start()
	
	$area2D.connect(\"area_entered\",get_tree().root.get_node(\"/root/battleScene\"),\"effects\")
	$area2D.connect(\"area_entered\",self,\"hit\")
	set_process(true)
	
func _process(delta):if dead:self.modulate=Color(\"#aaaaaa\")
func hit():
	twnHit.interpolate_property(self,\"scale\",Vector2(0.8,1.2)*self.scale,Vector2(1,1),0.4,Tween.TRANS_QUINT,Tween.EASE_OUT)
	twnHit.start()
"

[sub_resource type="StyleBoxFlat" id=8]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.156863, 0.156863, 0.184314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 1

[sub_resource type="GDScript" id=9]
script/source = "extends Label
const duration=1.0
const delay=0.4
var phrase=\"Eat my shorts! Oh wait\"
func _ready():
	self.percent_visible=0
	$twn.interpolate_property(self,\"percent_visible\",0,1,duration,Tween.TRANS_LINEAR,Tween.EASE_OUT,delay)
	$twn.start()
	$twn.connect(\"tween_all_completed\",self,\"delete\")
func delete():
	yield(get_tree().create_timer(2),\"timeout\")
	get_parent().get_parent().queue_free()
"

[sub_resource type="GDScript" id=10]
script/source = "extends TextureProgress

var targetPos=Vector2()
var duration=1.0

func _ready():
	randomize()
	duration*=rand_range(0.5,1.5)
	targetPos=self.rect_global_position
	self.rect_global_position.y=-1.5*self.rect_size.y
	var twnEnter=Tween.new()
	add_child(twnEnter)
	twnEnter.interpolate_property(self,\"rect_global_position:y\",self.rect_global_position.y,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnEnter.start()
	set_process(true)
func _process(delta):
	$cPUParticles2D.position.x=self.value*115/50
	if global.enemy.hp<=0 or global.player.hp<=0:
		$cPUParticles2D.one_shot=true
		self.value=lerp(self.value,0,0.2)
	else:
		self.value=get_tree().root.get_node(\"/root/battleScene\").playerStamina
"

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0, 0.227451, 0.772549, 1 )
colors = PoolColorArray( 0.45098, 0.152941, 0.360784, 1, 0.690196, 0.188235, 0.360784, 1, 1, 0.419608, 0.592157, 1, 1, 1, 1, 1 )

[sub_resource type="GDScript" id=11]
script/source = "extends NinePatchRect
var targetPos=Vector2()
var duration=1.5
func _ready():
	randomize()
	duration*=rand_range(0.5,1.5)
	targetPos=self.rect_global_position
	self.rect_global_position.y=-1.5*self.rect_size.y
	var twnEnter=Tween.new()
	add_child(twnEnter)
	twnEnter.interpolate_property(self,\"rect_global_position:y\",self.rect_global_position.y,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnEnter.start()
"

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="GDScript" id=14]
script/source = "extends RichTextLabel

var bufferedMessage=\"\"

func _ready():
	get_tree().get_root().connect(\"size_changed\", self, \"updateSize\")
	self.bbcode_text=\"\"
	set_process(true)
func _process(delta):
	if bufferedMessage!=\"\":
		self.bbcode_text+=bufferedMessage[0]
		bufferedMessage.erase(0,1)
func updateSize():
#	self.set(\"custom_fonts/normal_font\",load(\"res://resource/fonts/battleLog32.tres\") if OS.window_size.x>global.resolution.x*1.5 else load(\"res://resource/fonts/battleLog16.tres\"))
	if OS.window_size.x>1024*1.5:
		self.set(\"custom_fonts/normal_font\",load(\"res://resource/fonts/battleLog32.tres\"))
	else:
		self.set(\"custom_fonts/normal_font\",load(\"res://resource/fonts/battleLog16.tres\"))
"

[sub_resource type="GDScript" id=15]
script/source = "extends Button
func _ready():
	self.visible=false
#	self.rect_global_position.y=2*OS.window_size.y
	get_tree().root.get_node(\"/root/battleScene\").exitButton=self
	connect(\"pressed\",get_tree().root.get_node(\"/root/battleScene\"),\"exitBattle\")
	self.connect(\"mouse_entered\",global,\"createHoverSfx\")
	self.connect(\"button_down\",global,\"createSelectSfx\")
"

[sub_resource type="GDScript" id=16]
script/source = "extends Button
func _ready():
	self.visible=false
	self.rect_global_position.y=2*OS.window_size.y
	get_tree().root.get_node(\"/root/battleScene\").resetButton=self
	connect(\"pressed\",get_tree().root.get_node(\"/root/battleScene\"),\"gameOver\")
	self.connect(\"mouse_entered\",global,\"createHoverSfx\")
	self.connect(\"button_down\",global,\"createSelectSfx\")
"

[node name="battleScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 250.909 ]
}

[node name="twn" type="Tween" parent="."]

[node name="twnPlayer" type="Tween" parent="."]

[node name="twnEnemy" type="Tween" parent="."]

[node name="twnColorRectTransparency" type="Tween" parent="."]

[node name="twnShake" type="Tween" parent="."]

[node name="twnSelfPos" type="Tween" parent="."]

[node name="twnBackButton" type="Tween" parent="."]

[node name="colorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.128906, 0.128906, 0.128906, 0.75 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marginCtn" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.94812
margin_top = -3.53566
margin_right = 1.94812
margin_bottom = -3.53564
rect_clip_content = true
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="battlePanel" type="PanelContainer" parent="marginCtn"]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 575.0
rect_clip_content = true

[node name="battlePanelMargin" type="MarginContainer" parent="marginCtn/battlePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 967.0
margin_bottom = 543.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="BG" type="TextureRect" parent="marginCtn/battlePanel/battlePanelMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 950.0
margin_bottom = 526.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="hboxCtn" type="HBoxContainer" parent="marginCtn/battlePanel/battlePanelMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 950.0
margin_bottom = 526.0
alignment = 1

[node name="battleArea" type="MarginContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn"]
margin_right = 668.0
margin_bottom = 516.0
rect_min_size = Vector2( 668, 516 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="battleArea" type="VBoxContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea"]
margin_left = 20.0
margin_top = 20.0
margin_right = 648.0
margin_bottom = 496.0
alignment = 1

[node name="topPadding" type="HSeparator" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 628.0
margin_bottom = 33.0
custom_constants/separation = 33

[node name="enemyCtn" type="HBoxContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea"]
margin_top = 37.0
margin_right = 628.0
margin_bottom = 204.0
alignment = 1

[node name="enemyDefaultPosition" type="Position2D" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn"]
position = Vector2( 510, 110 )
script = SubResource( 1 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="enemySpr" type="Sprite" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn"]
position = Vector2( 510, 110 )
flip_h = true
script = SubResource( 2 )

[node name="twnDead" type="Tween" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn/enemySpr"]

[node name="pigeonShadow" type="Sprite" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn/enemySpr"]
modulate = Color( 0.231373, 0.231373, 0.231373, 1 )
position = Vector2( 0, 65 )
scale = Vector2( 4, 4 )
z_as_relative = false
texture = ExtResource( 1 )

[node name="pigeon" type="Sprite" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn/enemySpr"]
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
flip_h = true
__meta__ = {
"_editor_description_": ""
}

[node name="area2D" type="Area2D" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn/enemySpr"]
position = Vector2( -10.45, 9.50002 )

[node name="collisionShape2D" type="CollisionShape2D" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn/enemySpr/area2D"]
shape = SubResource( 3 )

[node name="sprite" type="Sprite" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn/enemySpr"]
visible = false
position = Vector2( 0, -64 )
scale = Vector2( 4, 4 )
z_index = 5
texture = ExtResource( 9 )
script = SubResource( 4 )

[node name="enemyStats" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn" instance=ExtResource( 14 )]
margin_right = 246.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
entering = true
compact = true

[node name="vSep" type="VSeparator" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 250.0
margin_right = 373.0
margin_bottom = 167.0
size_flags_horizontal = 3

[node name="barCtn" type="MarginContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn"]
margin_left = 377.0
margin_right = 627.0
margin_bottom = 25.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="marginCtnShadow" type="MarginContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn/barCtn"]
margin_left = 10.0
margin_right = 240.0
margin_bottom = 25.0
custom_constants/margin_right = -3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = -3
script = SubResource( 20 )

[node name="panelContainer" type="PanelContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn/barCtn/marginCtnShadow"]
margin_left = 3.0
margin_top = 3.0
margin_right = 233.0
margin_bottom = 28.0
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actionBar" type="TextureProgress" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn/barCtn"]
margin_left = 10.0
margin_right = 240.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 10 )
nine_patch_stretch = true
script = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="cPUParticles2D" type="CPUParticles2D" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/enemyCtn/barCtn/actionBar"]
position = Vector2( 115, 12 )
amount = 20
speed_scale = 1.2
randomness = 0.3
lifetime_randomness = 1.0
local_coords = false
draw_order = 1
emission_shape = 2
emission_rect_extents = Vector2( 6, 4 )
direction = Vector2( 0, -1 )
spread = 90.0
initial_velocity = 10.0
initial_velocity_random = 1.0
scale_amount = 8.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 17 )
color_ramp = SubResource( 21 )

[node name="midPadding" type="HSeparator" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 208.0
margin_right = 628.0
margin_bottom = 305.0
size_flags_vertical = 3

[node name="playerCtn" type="HBoxContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea"]
margin_top = 309.0
margin_right = 628.0
margin_bottom = 476.0
size_flags_vertical = 5
alignment = 1

[node name="playerDefaultPosition" type="Position2D" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn"]
position = Vector2( 125, 50 )
script = SubResource( 6 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="playerSpr" type="Sprite" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn"]
position = Vector2( 125, 50 )
script = SubResource( 7 )

[node name="pigeonShadow" type="Sprite" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/playerSpr"]
modulate = Color( 0.231373, 0.231373, 0.231373, 1 )
position = Vector2( 0, 65 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="pigeon" type="Sprite" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/playerSpr"]
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="area2D" type="Area2D" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/playerSpr"]

[node name="collisionShape2D" type="CollisionShape2D" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/playerSpr/area2D"]
shape = SubResource( 3 )

[node name="phraseCtn" type="PanelContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/playerSpr"]
visible = false
margin_left = 197.0
margin_top = -32.0
margin_right = 346.0
margin_bottom = 25.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marginCtn" type="MarginContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/playerSpr/phraseCtn"]
margin_left = 5.0
margin_top = 5.0
margin_right = 144.0
margin_bottom = 52.0
custom_constants/margin_right = 10
custom_constants/margin_top = 2
custom_constants/margin_left = 10
custom_constants/margin_bottom = 2

[node name="phrase" type="Label" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/playerSpr/phraseCtn/marginCtn"]
margin_left = 10.0
margin_top = 2.0
margin_right = 129.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 16 )
text = "Eat my shorts! Oh wait"
align = 1
valign = 1
autowrap = true
script = SubResource( 9 )

[node name="twn" type="Tween" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/playerSpr/phraseCtn/marginCtn/phrase"]

[node name="barCtn" type="MarginContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn"]
margin_top = 142.0
margin_right = 250.0
margin_bottom = 167.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 8
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="marginCtnShadow" type="MarginContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/barCtn"]
margin_left = 10.0
margin_right = 240.0
margin_bottom = 25.0
custom_constants/margin_right = -3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = -3
script = SubResource( 20 )

[node name="panelContainer" type="PanelContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/barCtn/marginCtnShadow"]
margin_left = 3.0
margin_top = 3.0
margin_right = 233.0
margin_bottom = 28.0
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actionBar" type="TextureProgress" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/barCtn"]
margin_left = 10.0
margin_right = 240.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
value = 50.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 10 )
nine_patch_stretch = true
script = SubResource( 10 )

[node name="cPUParticles2D" type="CPUParticles2D" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn/barCtn/actionBar"]
position = Vector2( 115, 12 )
amount = 20
speed_scale = 1.2
randomness = 0.3
lifetime_randomness = 1.0
local_coords = false
draw_order = 1
emission_shape = 2
emission_rect_extents = Vector2( 6, 4 )
direction = Vector2( 0, -1 )
spread = 90.0
initial_velocity = 10.0
initial_velocity_random = 1.0
scale_amount = 12.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 17 )
color_ramp = SubResource( 18 )
__meta__ = {
"_editor_description_": ""
}

[node name="vSep" type="VSeparator" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 254.0
margin_right = 377.0
margin_bottom = 167.0
size_flags_horizontal = 3

[node name="playerStats" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleArea/battleArea/playerCtn" instance=ExtResource( 13 )]
margin_left = 381.0
margin_right = 628.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
entering = true
compact = true

[node name="battleLog" type="MarginContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn"]
margin_left = 672.0
margin_right = 940.0
margin_bottom = 516.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="battleLog" type="NinePatchRect" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleLog"]
margin_right = 268.0
margin_bottom = 516.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 98, 176 )
patch_margin_left = 11
patch_margin_top = 15
patch_margin_right = 11
patch_margin_bottom = 11
script = SubResource( 11 )

[node name="marginContainer" type="MarginContainer" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleLog/battleLog"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 15
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="richTextLabel" type="RichTextLabel" parent="marginCtn/battlePanel/battlePanelMargin/hboxCtn/battleLog/battleLog/marginContainer"]
margin_left = 15.0
margin_top = 10.0
margin_right = 258.0
margin_bottom = 506.0
mouse_filter = 2
size_flags_horizontal = 3
custom_fonts/italics_font = SubResource( 12 )
custom_fonts/bold_font = SubResource( 13 )
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
bbcode_enabled = true
bbcode_text = "#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
"
text = "#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
"
scroll_following = true
script = SubResource( 14 )

[node name="ctnButtons" type="MarginContainer" parent="marginCtn/battlePanel"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 967.0
margin_bottom = 543.0
mouse_filter = 2
custom_constants/margin_right = 250
custom_constants/margin_top = 400
custom_constants/margin_left = 10
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vBoxContainer" type="CenterContainer" parent="marginCtn/battlePanel/ctnButtons"]
margin_left = 10.0
margin_top = 400.0
margin_right = 710.0
margin_bottom = 486.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnGoBack" type="Button" parent="marginCtn/battlePanel/ctnButtons/vBoxContainer"]
margin_left = 308.0
margin_top = 27.0
margin_right = 392.0
margin_bottom = 59.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 15 )
text = "Return"
script = SubResource( 15 )

[node name="btnReset" type="Button" parent="marginCtn/battlePanel/ctnButtons/vBoxContainer"]
margin_left = 308.0
margin_top = 27.0
margin_right = 392.0
margin_bottom = 59.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 15 )
text = "Retry!"
script = SubResource( 16 )
